--- a/recipes/tetris/index.html
+++ b/recipes/tetris/index.html
@@ -92,15 +92,35 @@
         height: 15px;
         position: absolute;
         width: 15px;
+        z-index: 0;
       }
 
-      .cell-i {}
-      .cell-l {}
-      .cell-j {}
-      .cell-o {}
-      .cell-s {}
-      .cell-z {}
-      .cell-t {}
+      .cell-i {
+        background: #0cc;
+      }
+
+      .cell-l {
+        background: #e80;
+      }
+
+      .cell-j {
+        background: #00f;
+      }
+
+      .cell-o {
+        background: #ee0;
+      }
+      .cell-s {
+        background: #0a0;
+      }
+
+      .cell-z {
+        background: #ff0000;
+      }
+
+      .cell-t {
+        background: #aa00cc;
+      }
 
       .sidebar {
         flex-direction: column;
@@ -109,6 +129,17 @@
 
       .sidebar-score {
         color:  #a4ede8;
+      }
+
+      .queue {
+        align-items: center;
+        flex-direction: column;
+        opacity: 0.5;
+      }
+
+      .queue-item {
+        margin: 15px 0 0 0;
+        position: relative;
       }
     </style>
   </head>
@@ -127,9 +158,17 @@
       </div>
 
       <div id="in-progress" class="in-progress flex">
-        <div class="board" id="board"></div>
+        <div class="board" id="board">
+          <div class="falling-brick" id="falling-brick"></div>
+        </div>
         <div class="sidebar flex">
           <div class="sidebar-score" id="sidebar-score"></div>
+          <div class="queue flex">
+            <div class="queue-item" id="queue-0"></div>
+            <div class="queue-item" id="queue-1"></div>
+            <div class="queue-item" id="queue-2"></div>
+            <div class="queue-item" id="queue-3"></div>
+          </div>
         </div>
       </div>
     </div>
